# OpenCL-Layers-Tutorial

./: README.md  Tutorial.sh
example_layer/: example_layer.c
presentation/: CMakeLists.txt  LayersForOpenCL.tex  Makefile  algorithm.sty  algorithmic.sty  beamerfontthemeprogressbar.sty  example_layer.c
